[package]
name = "bevy_picking_raycast"
version = "0.15.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_ecs = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_reflect = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_render = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_transform = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_window = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }

bevy_mod_raycast = "0.14"
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core", version = "0.15" }
