[package]
name = "bevy_picking_highlight"
version = "0.15.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_asset = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_ecs = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_reflect = { default-features = false, git = "https://github.com/bevyengine/bevy", rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1" }
bevy_render = { version = "0.11", optional = true, default-features = false }
bevy_pbr = { version = "0.11", optional = true, default-features = false }
bevy_sprite = { version = "0.11", optional = true, default-features = false }

bevy_picking_core = { path = "../bevy_picking_core", version = "0.15" }
bevy_picking_selection = { optional = true, path = "../bevy_picking_selection", version = "0.15" }

[features]
selection = ["bevy_picking_selection"]
sprite = ["bevy_render", "bevy_sprite"]
pbr = ["bevy_render", "bevy_pbr"]
